# dss-mainline

./: .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .project  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  README  Toolchain-lemonix-arm9.cmake  Toolchain-picocom1-arm9.cmake  acinclude.m4  config.cmake.h.in  config.h.in  configure.ac  dSS.1  doc.cpp  doxygen.conf  doxygen_webservices.conf  gen_lists.sh  main.cpp  namespaces.cpp  value_graph.xslt
core/: CMakeLists.txt  DS485Interface.cpp  DS485Interface.h  backtrace.cpp  base.cpp  base.h  bonjour.cpp  bonjour.h  businterface.h  busrequest.cpp  busrequest.h  busrequestdispatcher.cpp  busrequestdispatcher.h  configuration.cpp  configuration.h  datetools.cpp  datetools.h  ds485.cpp  ds485.h  ds485client.cpp  ds485client.h  ds485const.h  ds485proxy.cpp  ds485proxy.h  ds485types.cpp  ds485types.h  dss.cpp  dss.h  dss_mem.h  dss_memory.h  dss_mutex.h  dss_string.h  dssim.cpp  dssim.h  event.cpp  event.h  eventcollector.cpp  eventcollector.h  eventinterpreterplugins.cpp  eventinterpreterplugins.h  (+37 more)
core/ds485/: CMakeLists.txt  businterfacehandler.cpp  businterfacehandler.h  ds485.cpp  ds485.h  ds485busrequestdispatcher.cpp  ds485busrequestdispatcher.h  ds485proxy.cpp  ds485proxy.h  dsactionrequest.cpp  dsactionrequest.h  dsbusinterface.cpp  dsbusinterface.h  dsbusinterfaceobj.cpp  dsbusinterfaceobj.h  dsdevicebusinterface.cpp  dsdevicebusinterface.h  dsmeteringbusinterface.cpp  dsmeteringbusinterface.h  dsstructuremodifyingbusinterface.cpp  dsstructuremodifyingbusinterface.h  dsstructurequerybusinterface.cpp  dsstructurequerybusinterface.h  framebucketbase.cpp  framebucketbase.h  framebucketcollector.cpp  framebucketcollector.h
core/metering/: fake_meter.cpp  fake_meter.h  metering.cpp  metering.h  series.cpp  series.h  seriespersistence.cpp  seriespersistence.h
core/model/: CMakeLists.txt  addressablemodelitem.cpp  addressablemodelitem.h  apartment.cpp  apartment.h  busrequest.cpp  busrequest.h  busscanner.cpp  busscanner.h  device.cpp  device.h  devicecontainer.cpp  devicecontainer.h  deviceinterface.cpp  deviceinterface.h  devicereference.cpp  devicereference.h  group.cpp  group.h  modelconst.h  modelevent.cpp  modelevent.h  modelmaintenance.cpp  modelmaintenance.h  modelpersistence.cpp  modelpersistence.h  modeltypes.h  modulator.cpp  modulator.h  nonaddressablemodelitem.cpp  nonaddressablemodelitem.h  physicalmodelitem.cpp  physicalmodelitem.h  scenehelper.cpp  scenehelper.h  set.cpp  set.h  zone.cpp  zone.h
core/scripting/: ds485scriptextension.cpp  ds485scriptextension.h  jsevent.cpp  jsevent.h  jshandler.cpp  jshandler.h  jslogger.cpp  jslogger.h  jsmetering.cpp  jsmetering.h  jsmodel.cpp  jsmodel.h  jsproperty.cpp  jsproperty.h  jssocket.cpp  jssocket.h  modeljs.cpp  modeljs.h  propertyscriptextension.cpp  propertyscriptextension.h  scriptobject.cpp  scriptobject.h
core/security/: privilege.cpp  security.cpp  security.h  user.cpp
core/sim/: CMakeLists.txt  dsid_js.cpp  dsid_js.h  dsid_plugin.cpp  dsid_plugin.h  dsidsim.cpp  dsidsim.h  dsmetersim.cpp  dsmetersim.h  dssim.cpp  dssim.h
core/vfs/: vfs.h
core/web/: json.cpp  json.h  restful.cpp  restful.h  restfulapiwriter.cpp  restfulapiwriter.h  webrequests.cpp  webrequests.h  webserver.cpp  webserver.h  webserverapi.cpp  webserverapi.h  webserverplugin.cpp  webserverplugin.h
data/: Makefile.am  config.xml  config.xml.sample  images.list  index.html  initialize.js  ping.js  rate_triggers.xml  read_temperature.js  sim.xml  simulated_device.js  solar_computer.js  subscriptions.xml  temperature_sensor.js  test.js  test.xml  test2.js  test3.js  testconfig.xml  testsubscriptions.xml  testsubscriptions_DS485.xml  testsubscriptions_empty.xml  vdc-db-translation-update.sh  vdc-db-update.sh  vdc-db.sql
data/scripts/: handle_temperature_sensor_events.js  http.js  responder.js  solar_computer.js  system_action.js  system_conditions.js  system_events.js  system_hail.js  system_register_trigger.js  system_state.js  system_trigger.js
data/sqldumps/: vdc-db.sql
data/webroot/: PowerBar.html  (+19 more)
doc/: CMakeLists.txt  doc.css  doxygen.conf  doxygen.conf.in  doxygen_webservices.conf  doxygen_webservices.conf.in  ds485-event-flow.txt  dss-control-flow.txt  event-loop.txt  json_api.xslt
src/: .clang-format  CMakeLists.txt  Makefile.inc  backtrace.cpp  backtrace.h  base.cpp  base.h  bonjour.cpp  bonjour.h  businterface.h  comm-channel.cpp  comm-channel.h  datetools.cpp  datetools.h  defaultbuseventsink.cpp  defaultbuseventsink.h  ds485types.cpp  ds485types.h  dsidhelper.h  dss.cpp  dss.h  dssfwd.h  event.cpp  event.h  event_create.cpp  event_create.h  eventcollector.cpp  eventcollector.h  eventinterpreterplugins.cpp  eventinterpreterplugins.h  eventinterpretersystemplugins.cpp  eventinterpretersystemplugins.h  eventsubscriptionsession.cpp  eventsubscriptionsession.h  exception.cpp  exception.h  expatparser.cpp  expatparser.h  foreach.h  hasher.cpp  (+79 more)
tests/: 000_dss_instance_fixture_test.cpp  CMakeLists.txt  Makefile.inc  apartment_xml_tests.cpp  basetests.cpp  busrequesttests.cpp  circuitrequesthandlertest.cpp  curl_test.cpp  datetoolstests.cpp  db_fetcher.cpp  deviceinterfacerequesthandlertest.cpp  devicerequesthandlertest.cpp  devicetests.cpp  ds485tests.cpp  dsidhelpertest.cpp  dss_instance_tests.cpp  dss_life_cycle.cpp  dss_life_cycle.h  dss_life_cycle.hpp  dssimtest.cpp  dsuidtests.cpp  event_systemcondition_test.cpp  event_trigger_tests.cpp  eventrequesthandlertest.cpp  eventtests.cpp  framebucketcollectortest.cpp  http_client_tests.cpp  iconvtests.cpp  jsclustertests.cpp  jsdatabase.cpp  jsds485tests.cpp  jshandlertests.cpp  jsloggertests.cpp  jsontests.cpp  jsproperty.cpp  jssockettests.cpp  loggertests.cpp  meteringtests.cpp  model-autocluster_tests.cpp  model-cluster_tests.cpp  (+25 more)
webservices/: CMakeLists.txt  dss.nsmap  dss.wsdl  dss.xsd  gs-locks.cpp  gs-locks.h  model_soap.cpp  model_soap.h  namespaces.cpp  soapC.cpp  soapH.h  soapServer.cpp  soapServerLib.cpp  soapStub.h  soapdssObject.h  soapdssSSLObject.cpp  soapdssSSLObject.h  webservices.cpp  webservices.h
(+430 files in other folders)
